# myshoggothbot

./: LICENSE  README.md  myshoggothbot.cabal  stack.yaml
src/: Main.hs
