name:                myshoggothbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/myshoggoth/myshoggothbot#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew F. Boardman
maintainer:          andrew@myshoggoth.com
copyright:           2018
category:            irc
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable myshoggothbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , irc-client
                     , bytestring
                     , text
                     , lens
